chore: Updated UI and fixed UI breaking on mobile screen 	- Update navbar items 	- Update UI

--- a/parallax-showcase/src/app/globals.css
+++ b/parallax-showcase/src/app/globals.css
@@ -24,3 +24,9 @@ html {
 .main {
   width: 100%;
 }
+
+.section, section {
+  padding-top: 72px;
+  margin-top: -72px;
+  scroll-margin-top: 72px;
+}
